corrigindo erros de conexao docker